--- a/style/main.css
+++ b/style/main.css
@@ -5,6 +5,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
+  background-color: black;
 }
 
 .song {
@@ -39,6 +40,14 @@ body {
 
 .three {
   font-size: 3rem;
+}
+
+.text-white {
+  color: #fff;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .four .text-box {
